# deriver

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/: index.md
examples/: classical_mechanics.py  derive_marimo.py  differential_geometry.py  electromagnetism.py  linearized_gravity.py  quantum_mechanics.py  renormalization_group.py
examples/__marimo__/session/: classical_mechanics.py.json  differential_geometry.py.json  electromagnetism.py.json  linearized_gravity.py.json  quantum_mechanics.py.json  renormalization_group.py.json
examples/rendered/: classical_mechanics.html  classical_mechanics.ipynb  derive_marimo.ipynb  differential_geometry.html  differential_geometry.ipynb  electromagnetism.html  electromagnetism.ipynb  linearized_gravity.html  linearized_gravity.ipynb  quantum_mechanics.html  quantum_mechanics.ipynb  renormalization_group.html  renormalization_group.ipynb
src/derive/: __init__.py
src/derive/algebra/: __init__.py  linear.py  simplify.py  solve.py
src/derive/calculus/: __init__.py  differentiation.py  greens.py  integration.py  limits.py  series.py  transforms.py  variational.py
src/derive/core/: __init__.py  constants.py  numbers.py  symbols.py
tests/: test_api.py  test_assumptions.py  test_cache.py  test_compose.py  test_display.py  test_functions_def.py  test_lazy.py  test_notebook.py  test_number_functions.py  test_numbers.py  test_optimize.py  test_patterns.py  test_plotting.py  test_setup.py  test_sin.py  test_special_functions.py  test_standard_examples.py  test_tensors.py  test_transforms.py  test_types.py
(+37 files in other folders)
